--- a/src/main/resources/templates/plugin/quest/questline/view.html
+++ b/src/main/resources/templates/plugin/quest/questline/view.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Quest Line: [[${displayQuestLine.icon.description}]]</title>
+    <title>任务章节: [[${displayQuestLine.icon.description}]]</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Quest Line
+                任务章节
             </h1>
         </div>
         <div class="row justify-content-center">
@@ -29,18 +29,20 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Quest Line ID</th>
-                        <td>[[${questLine.questLineId}]]</td>
+                        <th scope="row">任务章节ID</th>
+                        <td>
+                            [[${questLine.questLineId}]]
+                        </td>
                     </tr>
                     <tr>
-                        <th scope="row">Name</th>
+                        <th scope="row">名称</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${questLine.name}">
                             [[${questLine.name}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Visibility</th>
+                        <th scope="row">可见性</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${questLine.visibility}">
                             [[${questLine.visibility}]]
@@ -53,16 +55,16 @@
         <div class="row mt-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Quest line description</h5>
+                    <h5 class="card-title">任务章节描述</h5>
                     [(${displayQuestLine.description})]
                 </div>
             </div>
         </div>
 
-        <div th:if="${questLine.quests.size} > 0" class="row justify-content-center mt-3">
+        <div th:if="${questLine.questLineEntries.size} > 0" class="row justify-content-center mt-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Quests</h5>
+                    <h5 class="card-title">任务</h5>
                     <span th:replace="~{fragment/icon::iconList(${displayQuestLine.quests})}">
                         </span>
                 </div>
