--- a/src/main/resources/templates/fragment/template_base.html
+++ b/src/main/resources/templates/fragment/template_base.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{~/index}">
-                            Index
+                            主页
                         </a>
                     </li>
                     <li th:each="table : ${@thymeleafService.navbarMainTables}" class="nav-item">
@@ -35,7 +35,7 @@
                         <li th:if="${dropdownTables.size} > 0" class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button"
                                data-bs-toggle="dropdown">
-                                Plugins
+                                插件
                             </a>
                             <ul class="dropdown-menu">
                                 <th:block th:each="tables,iterStat : ${dropdownTables}">
@@ -56,7 +56,7 @@
             <div class="col-3">
                 <form action="/idsearch" method="get">
                     <div class="input-group">
-                        <span class="input-group-text">Any ID</span>
+                        <span class="input-group-text">任意ID</span>
                         <input name="id" type="search" class="form-control">
                         <button type="submit" class="btn btn-primary">
                             <i class="bi-search"></i>
