--- a/src/main/resources/templates/plugin/base/advrecipe/search.html
+++ b/src/main/resources/templates/plugin/base/advrecipe/search.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Advanced Search Recipes</title>
+    <title>高级配方搜索</title>
 </head>
 <body>
 
@@ -10,17 +10,17 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Advanced Search Recipes
+                高级配方搜索
             </h1>
         </div>
         <div class="row">
             <span class="text-center text-info">
-                Search recipes grouped by recipe type.
+                按配方类型分组搜索配方。
             </span>
         </div>
         <div class="row">
             <span class="text-center">
-                Query fields will be joined with AND. Leave all fields blank to retrieve everything.
+                将根据所有填写的字段查找配方。留空全部字段则检索全部内容。
             </span>
         </div>
 
@@ -30,101 +30,101 @@
                 <div class="row">
                     <div class="col">
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('recipeCategory', 'Recipe category')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('recipeCategory', '配方类别')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('recipeType', 'Recipe type')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('recipeType', '配方类型')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputItemName', 'Input item localized name')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputItemName', '输入物品本地化名称')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputItemModId', 'Input item mod ID')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputItemModId', '输入物品模组ID')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchField('inputItemId', 'Input item ID', 'search')}">
+                            <th:block th:replace="~{fragment/search::searchField('inputItemId', '输入物品ID', 'search')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchField('inputItemGroupId', 'Input item group ID', 'search')}">
+                            <th:block th:replace="~{fragment/search::searchField('inputItemGroupId', '输入物品组ID', 'search')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputFluidName', 'Input fluid localized name')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputFluidName', '输入流体本地化名称')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputFluidModId', 'Input fluid mod ID')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('inputFluidModId', '输入流体模组ID')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchField('inputFluidId', 'Input fluid ID', 'search')}">
+                            <th:block th:replace="~{fragment/search::searchField('inputFluidId', '输入流体ID', 'search')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchField('inputFluidGroupId', 'Input fluid group ID', 'search')}">
+                            <th:block th:replace="~{fragment/search::searchField('inputFluidGroupId', '输入流体组ID', 'search')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputItemName', 'Output item localized name')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputItemName', '输出物品本地化名称')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputItemModId', 'Output item mod ID')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputItemModId', '输出物品模组ID')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchField('outputItemId', 'Output item ID', 'search')}">
+                            <th:block th:replace="~{fragment/search::searchField('outputItemId', '输出物品ID', 'search')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputFluidName', 'Output fluid localized name')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputFluidName', '输出流体本地化名称')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputFluidModId', 'Output fluid mod ID')}">
+                            <th:block th:replace="~{fragment/search::searchFieldRegex('outputFluidModId', '输出流体模组ID')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
 
                         <div class="mt-2">
-                            <th:block th:replace="~{fragment/search::searchField('outputFluidId', 'Output fluid ID', 'search')}">
+                            <th:block th:replace="~{fragment/search::searchField('outputFluidId', '输出流体ID', 'search')}">
                             </th:block>
                             <div class="form-text">&nbsp;</div>
                         </div>
@@ -140,15 +140,15 @@
 
         <div class="row my-5">
             <h1 class="display-3 text-center">
-                Search Results
+                搜索结果
             </h1>
         </div>
         <div class="row">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">
-                        [[${@thymeleafService.formatInteger(results.size)}]] recipe types |
-                        [[${@thymeleafService.formatInteger(totalSize)}]] total recipes
+                        [[${@thymeleafService.formatInteger(results.size)}]] 配方类型 |
+                        [[${@thymeleafService.formatInteger(totalSize)}]] 总配方数
                     </h5>
                     <span th:if="${results.size} > 0"
                           th:replace="~{fragment/icon::iconList(${results})}">
