--- a/src/main/resources/templates/plugin/base/fluidgroup/search.html
+++ b/src/main/resources/templates/plugin/base/fluidgroup/search.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Search Fluid Groups</title>
+    <title>搜索流体组</title>
 </head>
 <body>
 
@@ -10,12 +10,12 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Search Fluid Groups
+                搜索流体组
             </h1>
         </div>
         <div class="row">
             <span class="text-center">
-                Query fields will be joined with AND. Leave all fields blank to retrieve everything.
+                将根据所有填写的字段查找流体组。留空全部字段则检索全部内容。
             </span>
         </div>
 
@@ -25,38 +25,38 @@
                     <div class="row">
                         <div class="col">
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldRegex('fluidName', 'Fluid name')}">
+                                <th:block th:replace="~{fragment/search::searchFieldRegex('fluidName', '流体名')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldRegex('fluidModId', 'Fluid mod ID')}">
+                                <th:block th:replace="~{fragment/search::searchFieldRegex('fluidModId', '流体模组ID')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchField('fluidId', 'Fluid ID', 'search')}">
+                                <th:block th:replace="~{fragment/search::searchField('fluidId', '流体ID', 'search')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('amount', 'Amount')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('amount', '数量')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('minSize', 'Minimum size')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('minSize', '最小数量')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('maxSize', 'Maximum size')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('maxSize', '最大数量')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
@@ -73,7 +73,7 @@
 
         <div class="row my-5">
             <h1 class="display-3 text-center">
-                Search Results
+                搜索结果
             </h1>
         </div>
         <div class="row">
