--- a/src/main/resources/templates/plugin/base/item/view.html
+++ b/src/main/resources/templates/plugin/base/item/view.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Item: [[${displayItem.icon.description}]]</title>
+    <title>物品: [[${displayItem.icon.description}]]</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Item
+                物品
             </h1>
         </div>
         <div class="row justify-content-center">
@@ -29,28 +29,28 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Mod</th>
+                        <th scope="row">模组</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${item.modId}">
                             [[${item.modId}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Internal name</th>
+                        <th scope="row">内部名称</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${item.internalName}">
                             [[${item.internalName}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Localized name</th>
+                        <th scope="row">本地化名称</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${item.localizedName}">
                             [[${item.localizedName}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Unlocalized name</th>
+                        <th scope="row">未本地化名称</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${item.unlocalizedName}">
                             [[${item.unlocalizedName}]]
@@ -61,31 +61,31 @@
             <div class="col">
                 <table class="table table-striped table-fixed border">
                     <tr>
-                        <th scope="row">Item ID</th>
+                        <th scope="row">物品ID</th>
                         <td>
                             [[${@thymeleafService.formatInteger(item.itemId)}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Item damage</th>
+                        <th scope="row">物品耐久</th>
                         <td>
                             [[${@thymeleafService.formatInteger(item.itemDamage)}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Max stack size</th>
+                        <th scope="row">最大堆叠数量</th>
                         <td>
                             [[${@thymeleafService.formatInteger(item.maxStackSize)}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Max damage</th>
+                        <th scope="row">最大耐久</th>
                         <td>
                             [[${@thymeleafService.formatInteger(item.maxDamage)}]]
                         </td>
                     </tr>
                     <tr class="align-middle">
-                        <th scope="row">Give item</th>
+                        <th scope="row">获取物品指令</th>
                         <td class="text-truncate font-monospace"
                             data-bs-toggle="tooltip" th:data-bs-title="${displayItem.giveCommand}">
                             <button th:replace="~{fragment/copy::copyButton(${displayItem.giveCommand})}">
@@ -94,7 +94,7 @@
                         </td>
                     </tr>
                     <tr th:if="${displayItem.giveStackCommand.present}" class="align-middle">
-                        <th scope="row">Give stack</th>
+                        <th scope="row">给予最大堆叠</th>
                         <td class="text-truncate font-monospace"
                             data-bs-toggle="tooltip" th:data-bs-title="${displayItem.giveStackCommand.get}">
                             <button th:replace="~{fragment/copy::copyButton(${displayItem.giveStackCommand.get})}">
@@ -111,7 +111,7 @@
                             <button class="accordion-button" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#tooltipCollapse"
                                     aria-expanded="true" aria-controls="tooltipCollapse">
-                                Tooltip
+                                描述
                             </button>
                         </h2>
                         <div id="tooltipCollapse" class="accordion-collapse collapse show"
@@ -151,7 +151,7 @@
                             <button class="accordion-button collapsed" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#toolClassesCollapse"
                                     aria-expanded="false" aria-controls="toolClassesCollapse">
-                                Tool classes
+                                工具类别
                             </button>
                         </h2>
                         <div id="toolClassesCollapse" class="accordion-collapse collapse"
