--- a/src/main/resources/templates/plugin/base/itemgroup/search.html
+++ b/src/main/resources/templates/plugin/base/itemgroup/search.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Search Item Groups</title>
+    <title>搜索物品组</title>
 </head>
 <body>
 
@@ -10,12 +10,12 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Search Item Groups
+                搜索物品组
             </h1>
         </div>
         <div class="row">
             <span class="text-center">
-                Query fields will be joined with AND. Leave all fields blank to retrieve everything.
+                将根据所有填写的字段查找物品组。留空全部字段则检索全部内容。
             </span>
         </div>
 
@@ -25,38 +25,38 @@
                     <div class="row">
                         <div class="col">
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldRegex('itemName', 'Item name')}">
+                                <th:block th:replace="~{fragment/search::searchFieldRegex('itemName', '物品名')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldRegex('itemModId', 'Item mod ID')}">
+                                <th:block th:replace="~{fragment/search::searchFieldRegex('itemModId', '物品模组ID')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchField('itemId', 'Item ID', 'search')}">
+                                <th:block th:replace="~{fragment/search::searchField('itemId', '物品ID', 'search')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('stackSize', 'Stack size')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('stackSize', '堆叠大小')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('minSize', 'Minimum size')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('minSize', '最小数量')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('maxSize', 'Maximum size')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('maxSize', '最大数量')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
@@ -73,7 +73,7 @@
 
         <div class="row my-5">
             <h1 class="display-3 text-center">
-                Search Results
+                搜索结果
             </h1>
         </div>
         <div class="row">
