--- a/src/main/resources/templates/plugin/base/recipe/view.html
+++ b/src/main/resources/templates/plugin/base/recipe/view.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Recipe: [[${displayRecipe.icon.description}]]</title>
+    <title>配方: [[${displayRecipe.icon.description}]]</title>
 </head>
 <body>
 
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Recipe
+                配方
             </h1>
         </div>
         <div class="row justify-content-center">
@@ -32,21 +32,21 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Category</th>
+                        <th scope="row">类别</th>
                         <td class="text-truncate" data-bs-toggle="tooltip"
                             th:data-bs-title="${recipe.recipeType.category}">
                             [[${recipe.recipeType.category}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Type</th>
+                        <th scope="row">类型</th>
                         <td class="text-truncate"
                             data-bs-toggle="tooltip" th:data-bs-title="${recipe.recipeType.type}">
                             [[${recipe.recipeType.type}]]
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row">Shapeless</th>
+                        <th scope="row">无序配方</th>
                         <td>
                             <th:block th:replace="~{fragment/format::formatBoolean(${recipe.recipeType.shapeless})}">
                             </th:block>
@@ -59,7 +59,7 @@
             <div class="col-auto" th:if="${displayRecipe.itemInputs.size} + ${displayRecipe.fluidInputs.size} > 0">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Inputs</h5>
+                        <h5 class="card-title">输入</h5>
                         <div class="container">
                             <div class="mt-3" th:if="${displayRecipe.itemInputs.size} > 0">
                                 <div th:replace="~{fragment/recipe::recipeGridTable(${displayRecipe.itemInputs},${displayRecipe.itemInputsMaxDimension})}">
@@ -77,7 +77,7 @@
             <div class="col-auto" th:if="${displayRecipe.itemOutputs.size} + ${displayRecipe.fluidOutputs.size} > 0">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Outputs</h5>
+                        <h5 class="card-title">输出</h5>
                         <div class="container">
                             <div class="mt-3" th:if="${displayRecipe.itemOutputs.size} > 0">
                                 <div th:replace="~{fragment/recipe::recipeGridTable(${displayRecipe.itemOutputs},${displayRecipe.itemOutputsMaxDimension})}">
