--- a/src/main/resources/templates/plugin/base/recipetype/search.html
+++ b/src/main/resources/templates/plugin/base/recipetype/search.html
@@ -2,7 +2,7 @@
 <html th:replace="~{fragment/template::template(~{::title}, ~{::content})}"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Search Recipe Types</title>
+    <title>搜索配方类型</title>
 </head>
 <body>
 
@@ -10,12 +10,12 @@
     <div class="container">
         <div class="row">
             <h1 class="display-3 text-center">
-                Search Recipe Types
+                搜索配方类型
             </h1>
         </div>
         <div class="row">
             <span class="text-center">
-                Query fields will be joined with AND. Leave all fields blank to retrieve everything.
+                将根据所有填写的字段查找配方。留空全部字段则检索全部内容。
             </span>
         </div>
 
@@ -25,26 +25,26 @@
                     <div class="row">
                         <div class="col">
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldRegex('recipeCategory', 'Recipe category')}">
+                                <th:block th:replace="~{fragment/search::searchFieldRegex('recipeCategory', '配方类别')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldRegex('recipeType', 'Recipe type')}">
+                                <th:block th:replace="~{fragment/search::searchFieldRegex('recipeType', '配方类型')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('minRecipeCount', 'Minimum recipe count')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('minRecipeCount', '最小配方数')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
 
                             <div class="mt-2">
-                                <th:block th:replace="~{fragment/search::searchFieldNumber('maxRecipeCount', 'Maximum recipe count')}">
+                                <th:block th:replace="~{fragment/search::searchFieldNumber('maxRecipeCount', '最大配方数')}">
                                 </th:block>
                                 <div class="form-text">&nbsp;</div>
                             </div>
@@ -61,7 +61,7 @@
 
         <div class="row my-5">
             <h1 class="display-3 text-center">
-                Search Results
+                搜索结果
             </h1>
         </div>
         <div class="row">
